# tide-morth-example

./: Cargo.toml  Dockerfile  README.md
public/styles/: style.css
src/: main.rs
src/models/: cities.rs  city.rs  mod.rs
src/routes/: articles.rs  cities.rs  mod.rs
views/: welcome.hbs
views/articles/: form.hbs  list.hbs  show.hbs
views/cities/: form.hbs  list.hbs  show.hbs
views/layouts/: main.hbs
