[package]
name = "tide-morth-example"
version = "0.1.0"
authors = ["Anton Whalley <anton@venshare.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.12"
tide-handlebars="0.3"
handlebars="3.2.1"
async-std = { version = "1.6.0", features = ["unstable", "attributes"] }
mongodb = { git = "https://github.com/saghm/mongo-rust-driver", branch = "RUST-452", features = ["async-std-runtime"], version = "1.0.0", default-features = false } 
serde = "1.0.0"
serde_json = "1.0.39"
wither = { version = "0.9.0-alpha.1", features = ["async-std-runtime"], default-features = false }
env_logger = "0.7.1"
log = "0.4.11"
[patch.crates-io]
mongodb = { git = "https://github.com/saghm/mongo-rust-driver", branch = "RUST-452", features = ["async-std-runtime"], version = "1.0.0", default-features = false } 
